#ifndef __REC_COMMAND_DATA_COMMANDS__
#define __REC_COMMAND_DATA_COMMANDS__

// Created by the command line:
// new --include=command/Command --proto=Commands Commands.def

#include "rec/command/Command.h"
#include "rec/util/Defaulter.h"

namespace rec {
namespace command {
namespace data {

extern Def<Commands> commands;

}  // namespace data
}  // namespace command
}  // namespace rec

#endif  // __REC_COMMAND_DATA_COMMANDS__
