#ifndef __REC_COMMAND_DATA_DESCRIPTIONS__
#define __REC_COMMAND_DATA_DESCRIPTIONS__

// Created by the command line:
// new --include=command/Command --proto=Commands Descriptions.def

#include "rec/command/Command.h"
#include "rec/util/Defaulter.h"

namespace rec {
namespace command {
namespace data {

extern Def<Commands> descriptions;

}  // namespace data
}  // namespace command
}  // namespace rec

#endif  // __REC_COMMAND_DATA_DESCRIPTIONS__
