#include "rec/command/data/KeyPresses.def.h"

// Created by the command line:
// new --include=command/Command --proto=Commands KeyPresses.def

namespace rec {
namespace command {
namespace data {

Def<Commands> keyPresses(
"command {\n"
  "  type: DEL\n"
  "  keypress {\n"
  "    keycode: 8\n"
  "    keycode: 127\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: CUT\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: COPY\n"
  "  keypress {\n"
  "    key: \"c\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: PASTE\n"
  "  keypress {\n"
  "    key: \"v\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: SELECT_ALL\n"
  "  keypress {\n"
  "    key: \"a\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: DESELECT_ALL\n"
  "  keypress {\n"
  "    key: \"d\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: ADD_LOOP_POINT\n"
  "  keypress {\n"
  "    key: \"+\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: AUDIO_PREFERENCES\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: CLEAR_NAVIGATOR\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: CLEAR_LOOPS\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: CLOSE_FILE\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: DIM_VOLUME_TOGGLE\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: EJECT_CDS\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: INVERT_LOOP_SELECTION\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: KEYBOARD_MAPPINGS\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: MIDI_MAPPINGS\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: MUTE_VOLUME_TOGGLE\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: NUDGE_VOLUME_DOWN\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: NUDGE_VOLUME_UP\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: OPEN\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: RESET_GAIN_TO_UNITY\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: TOGGLE_WHOLE_SONG_LOOP\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: TOGGLE_START_STOP\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  "command {\n"
  "  type: UNDO\n"
  "  keypress {\n"
  "    key: \"x\"\n"
  "    command: true\n"
  "  }\n"
  "}\n"
  " "
);

}  // namespace data
}  // namespace command
}  // namespace rec
