#ifndef __REC_COMMAND_DATA_REPEATED__
#define __REC_COMMAND_DATA_REPEATED__

// Created by the command line:
// new --include=command/Command --proto=Commands Repeated.def

#include "rec/command/Command.h"
#include "rec/util/Defaulter.h"

namespace rec {
namespace command {
namespace data {

extern Def<Commands> repeated;

}  // namespace data
}  // namespace command
}  // namespace rec

#endif  // __REC_COMMAND_DATA_REPEATED__
